--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -15,11 +15,21 @@
   list-style-type: none;
   display: flex;
   align-items: center;
+  color: #407bff;
 }
 
 .nav li {
   cursor: pointer;
   margin: 0 1rem;
+  transition: all 2s ease;
+}
+
+.nav-link {
+  transition: all 0.3s ease;
+}
+
+.nav-link:hover {
+  color: #407bff;
 }
 
 .nav li a {
