adding to github pages

--- a/src/components/projects/ProjectCard.module.css
+++ b/src/components/projects/ProjectCard.module.css
@@ -29,7 +29,7 @@
 .project-img-container img {
   height: 100%;
   width: 100%;
-  object-fit: cover;
+  object-fit: contain/cover;
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
 }
