--- a/src/components/projects/ProjectCard.module.css
+++ b/src/components/projects/ProjectCard.module.css
@@ -13,6 +13,7 @@
 
 .project-container:hover {
   transform: scale(1.02);
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 16px 48px;
 }
 
 .project-img-container {
